--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
 /* Estilos del contenido del modal */
 .contenido-modal {
     background: white;
-    padding: 20px;
+    padding: 10px;
     border-radius: 10px;
     text-align: center;
     width: 300px;
@@ -27,4 +27,17 @@
     right: 15px;
     font-size: 24px;
     cursor: pointer;
+}
+.modalP {
+    display: none; /* Oculto por defecto */
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
